Pagination CSS is now shipping as desired